unfinished code for golem from halloween 2013

--- a/classes.sikuli/explorers.yml
+++ b/classes.sikuli/explorers.yml
@@ -1,9 +1,9 @@
 explorer:
   action: treasure
-  duration: long
+  duration: very_long
 savage_scout:
-  action: adventure
-  duration: medium
+  action: treasure
+  duration: very_long
 experienced_explorer:
-  action: adventure
-  duration: medium
+  action: treasure
+  duration: very_long
